<resources>
    <string name="app_name">Dapenduk</string>
    <string name="title_add">Add Data</string>
    <string name="title_detail">Detail</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="empty_label">Empty</string>

    <!--login-->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="wrong_credentials">Username or password incorrect</string>

    <!-- dashboard -->
    <string name="add_data_label">Add data</string>
    <string name="edit_data_label">Edit data</string>
    <string name="delete_data_label">Delete data</string>
    <string name="logout_label">Logout</string>

    <!-- add -->
    <string name="add_name_hint">Full name</string>
    <string name="add_gender_label">Sex</string>
    <string name="man_choice_label">Men</string>
    <string name="women_choice_label">Women</string>
    <string name="add_address_hint">Address</string>
    <string name="add_place_of_birth_hint">Place of birth</string>
    <string name="add_date_of_birth_hint">Date of birth</string>
    <string name="add_job_hint">Occupation</string>
    <string name="add_button_label">Add to Dapenduk</string>
    <string name="add_name_empty_warning">Name cannot be empty</string>
    <string name="add_address_empty_warning">Address cannot be empty</string>
    <string name="add_place_of_birth_empty_warning">Place of birth cannot be empty</string>
    <string name="add_date_of_birth_empty_warning">Date of birth cannot be empty</string>
    <string name="add_success_message">Successfully inserted</string>

    <!-- detail -->
    <string name="detail_address_label">Address</string>
    <string name="detail_place_of_birth_label">Place of birth</string>
    <string name="detail_date_of_birth_label">Date of birth</string>
    <string name="detail_occupation_label">Occupation</string>
    <string name="detail_edit_button_label">Edit</string>
    <string name="detail_delete_button_label">Delete</string>

    <string name="hello_blank_fragment">hello</string>
</resources>
