<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".add.AddDataActivity">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addNameFieldLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_name_hint"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/sexRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexLabel">

            <RadioButton
                android:id="@+id/malechoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.5"
                android:text="@string/man_choice_label"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/femalechoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.5"
                android:text="@string/women_choice_label"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/sexLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_gender_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addNameFieldLayout" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addAddressFieldLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexRadioGroup">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addAddressField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_address_hint"
                android:inputType="textPostalAddress"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addBornFieldLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addAddressFieldLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addBornField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_place_of_birth_hint"
                android:inputType="text"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addDateBirthFieldLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addBornFieldLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addDateBirthField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_date_of_birth_hint"
                android:longClickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addJobFieldLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addDateBirthFieldLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addJobField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_job_hint"
                android:inputType="text"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_button_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addJobFieldLayout" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>